# diabolo

./: CMakeLists.txt
src/: CMakeLists.txt  aboutprog.cpp  aboutprog.h  aboutprog.ui  ball.cpp  ball.h  clickableshadow.cpp  clickableshadow.h  footballer.cpp  footballer.h  game.cpp  game.h  game_rules.txt  gamemodedialog.cpp  gamemodedialog.h  gamemodedialog.ui  gamerules.cpp  gamerules.h  gamerules.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pitch.cpp  pitch.h  resources.qrc
